# withings-api

./: .gitignore  README.md  pyproject.toml
schemas/: openapi-2.0.raw.yaml  openapi-2.0.yaml
scripts/: generate-api.py  scrape-api.py
withings_api/: __init__.py  auth.py  constants.py  withings.py
withings_api/models/: __init__.py  activity_object.py  answers_list.py  answers_list_answers_item_type_1.py  answersv_2_get_response_200.py  answersv_2_get_response_200_body.py  devicev_2_disablefeature_response_200.py  devicev_2_disablefeature_response_200_body.py  devicev_2_enablefeature_response_200.py  devicev_2_enablefeature_response_200_body.py  devicev_2_updatesimstatus_response_200.py  devicev_2_updatesimstatus_response_200_body.py  dropshipment_create_order_object.py  dropshipment_create_order_product_object.py  dropshipment_get_order_status_object.py  dropshipment_get_order_status_product_device_object.py  dropshipment_get_order_status_product_object.py  dropshipmentv_2_createorder_response_200.py  dropshipmentv_2_createorder_response_200_body.py  dropshipmentv_2_createuserorder_response_200.py  dropshipmentv_2_createuserorder_response_200_body.py  dropshipmentv_2_createuserorder_response_200_body_user.py  dropshipmentv_2_delete_response_200.py  dropshipmentv_2_delete_response_200_body.py  dropshipmentv_2_getorderstatus_enrich.py  dropshipmentv_2_getorderstatus_response_200.py  dropshipmentv_2_getorderstatus_response_200_body.py  dropshipmentv_2_update_response_200.py  dropshipmentv_2_update_response_200_body.py  heart_measurement_object.py  lastupdate_object.py  (+135 more)
(+55 files in other folders)
